--- a/components/main-hero/main-hero.module.scss
+++ b/components/main-hero/main-hero.module.scss
@@ -6,8 +6,10 @@
   justify-content: center;
   padding: calc(80px + var(--space-xl)) var(--space-xl) var(--space-xl);
   max-width: 1000px;
+  width: 100%;
   margin: 0 auto;
   z-index: 1;
+  box-sizing: border-box;
 }
 
 .manifesto {
